--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ six==1.17.0
 smmap==5.0.1
 statsmodels==0.14.4
 streamlit==1.40.2
+streamlit-option-menu==0.4.0
 tenacity==9.0.0
 toml==0.10.2
 tornado==6.4.2
